# Real-Time-SDK

./: .classpath  .editorconfig  .gitignore  .gitmodules  .project  .semgrepconfig  CMakeLists.txt  LICENSE.md  README.md  REBRAND.md
Cpp-C/: CHANGELOG  CHANGELOG.md  CMakeLists.txt  ESDK-C-Edition_Test_Plan.xlsx  README.md  RTSDK-C-Edition_Test_Plan.xlsx
Cpp-C/Ema/: CMakeLists.txt  EmaConfig.xml  EmaConfig.xsd  LICENSE.md  README.md  makefile.common
Cpp-C/Ema/Docs/: EMACPP_3.0.3_TestResults.xlsx  EMACPP_3.0.4_TestResults.xlsx  EMACPP_3.0.5_TestResults.xlsx  EMACPP_306_TestResults.xlsx  EMACPP_310_TestResults.xlsx  EMACPP_311_TestResults.xlsx  EMAC_3.0.2_TestResults.xlsx  ESDK-C-Edition_Test_Plan.xlsx
Cpp-C/Ema/Docs/HTML/: wwhsec.htm
Cpp-C/Ema/Docs/doxygen/: CMakeLists.txt
Cpp-C/Ema/Docs/portal/: select_help_system.htm
Cpp-C/Ema/Etc/: RDMFieldDictionary  RDMFieldDictionary_large  enumtype.def
Cpp-C/Ema/Examples/: CMakeLists.txt  EmaConfig.xml
Cpp-C/Ema/Examples/PerfTools/: CMakeLists.txt  EmaConfig.xml  PerfTools_VS100.sln  PerfTools_VS110.sln  PerfTools_VS120.sln  PerfTools_VS140.sln
Cpp-C/Ema/Examples/Training/: CMakeLists.txt  CMakeLists.txt.in  Consumer_VS100.sln  Consumer_VS110.sln  Consumer_VS120.sln  Consumer_VS140.sln  EmaNiProviderConfig.xml  ReadMe_First.txt  Training_VS100.sln  Training_VS110.sln  Training_VS120.sln  Training_VS140.sln  makefile  makefile.examples.common  makefile.second
Cpp-C/Ema/Src/Access/: CMakeLists.txt  Ema.rc  EmaVersion.c  EmaVersion.h  EmaVersion.h.in  Ema_VS100.sln  Ema_VS100.vcxproj  Ema_VS100.vcxproj.filters  Ema_VS110.sln  Ema_VS110.vcxproj  Ema_VS110.vcxproj.filters  Ema_VS120.sln  Ema_VS120.vcxproj  Ema_VS120.vcxproj.filters  Ema_VS140.sln  Ema_VS140.vcxproj  Ema_VS140.vcxproj.filters  ema_VS100.vcxproj  ema_VS110.vcxproj  ema_VS120.vcxproj  makefile  makefile.lib
Cpp-C/Ema/Src/Include/: Ema.h
Cpp-C/Ema/TestTools/QATools/: EmaConfigTemplate.xml  qa_readme.txt
Cpp-C/Eoa/: LICENSE.md  README.md  makefile.common
Cpp-C/Eoa/Etc/: RDMFieldDictionary_large
Cpp-C/Eoa/Examples/: EOA_Domain_Examples.xls
Cpp-C/Eoa/Src/Include/: Eoa.h
Cpp-C/Eta/: CMakeLists.txt  LICENSE.md  LinuxSoLink  README.md  SolarisSoLink
Cpp-C/Eta/Applications/: CMakeLists.txt
Cpp-C/Eta/Docs/: ETAC_Test_Plan.xlsx  TransportAPI_Portal.html
Cpp-C/Eta/Docs/doxygen/: CMakeLists.txt
Cpp-C/Eta/Docs/portal/: TransportAPI_LegacyPortal.html  TransportAPI_ValueAdd_Portal.html  VAProductOverviewETA.htm  VAhomeETA.htm  VAtocETA.htm  copyright.htm  homeETA.htm  productOverviewETA.htm  select_help_systemETA.htm  styles.css  stylesheet.css  tocETA.htm
Cpp-C/Eta/Impl/: CMakeLists.txt  Stubs_VS140.sln  ValueAdd_VS140.sln  cacheStubsShared_VS100.vcxproj  cacheStubsShared_VS100.vcxproj.filters  cacheStubsShared_VS110.vcxproj  cacheStubsShared_VS110.vcxproj.filters  cacheStubsShared_VS120.vcxproj  cacheStubsShared_VS120.vcxproj.filters  cacheStubsShared_VS140.vcxproj  cacheStubsShared_VS140.vcxproj.filters  cacheStubsStatic_VS100.vcxproj.filters  cacheStubsStatic_VS110.vcxproj  cacheStubsStatic_VS110.vcxproj.filters  cacheStubsStatic_VS120.vcxproj.filters  cacheStubsStatic_VS140.vcxproj  cacheStubsStatic_VS140.vcxproj.filters  libVA_VS100.vcxproj  libVA_VS100.vcxproj.filters  libVA_VS110.vcxproj  libVA_VS110.vcxproj.filters  libVA_VS120.vcxproj  libVA_VS120.vcxproj.filters  libVA_VS140.vcxproj  libVA_VS140.vcxproj.filters  makefile  makefileStubs  makefileVA  readme  stubsShared_VS100.vcxproj  stubsShared_VS100.vcxproj.filters  stubsShared_VS110.vcxproj  stubsShared_VS110.vcxproj.filters  stubsShared_VS120.vcxproj  stubsShared_VS120.vcxproj.filters  stubsShared_VS140.vcxproj  stubsShared_VS140.vcxproj.filters  stubsStatic_VS100.vcxproj  stubsStatic_VS100.vcxproj.filters  stubsStatic_VS110.vcxproj  (+4 more)
Cpp-C/Eta/Impl/Ansi/: CMakeLists.txt  ansiVersion.h  ansiVersion.h.in  d_cursor.c  d_ef.c  d_fe.c  d_graphic.c  d_main.c  d_misc.c  d_state.c  e_main.c
Cpp-C/Eta/Impl/Codec/: CMakeLists.txt  arrayDecoder.c  arrayEncoder.c  codes.c  dataDictionary.c  dataTypes.c  dataUtils.c  decodeRoutines.c  dictionary.c  dtime.c  elemListDecoder.c  elemListEncoder.c  fieldListDecoder.c  fieldListDefs.c  fieldListEncoder.c  fileUtil.c  filterListDecoder.c  filterListEncoder.c  mapDecoder.c  mapEncoder.c  messageDecoders.c  messageEncoders.c  msgs.c  numeric.c  primitiveDecoders.c  primitiveEncoders.c  rsslCharSet.c  rsslRmtes.c  rsslVersionShared.c  rsslVersionStatic.c  rsslcnvtab.c  rwfConvert.c  seriesDecoder.c  seriesEncoder.c  setDictionary.c  state.c  vectorDecoder.c  vectorEncoder.c  xmlDomainDump.c  xmlDump.c  (+1 more)
Cpp-C/Eta/Impl/Converter/: CMakeLists.txt  EnumTableDefinition.C  jsmn.C  jsonToRsslMsgDecoder.C  jsonToRwfBase.C  jsonToRwfConverter.C  jsonToRwfSimple.C  rjcbuffer.C  rjchexdmp.C  rjcstring.C  rsslJsonConverter.C  rwfToJsonBase.C  rwfToJsonConverter.C  rwfToJsonSimple.C
Cpp-C/Eta/Impl/EtaJni/: CMakeLists.txt
Cpp-C/Eta/Impl/RDM/: CMakeLists.txt  RDM_VS100.vcxproj  RDM_VS100.vcxproj.filters  RDM_VS110.vcxproj  RDM_VS110.vcxproj.filters  RDM_VS120.vcxproj.filters  RDM_VS140.vcxproj  RDM_VS140.vcxproj.filters  rsslRDMDictionaryMsg.c  rsslRDMDirectoryMsg.c  rsslRDMLoginMsg.c  rsslRDMQueueMsg.c
Cpp-C/Eta/Impl/Reactor/: CMakeLists.txt  Reactor_VS100.vcxproj  Reactor_VS100.vcxproj.filters  Reactor_VS110.vcxproj  Reactor_VS110.vcxproj.filters  Reactor_VS120.vcxproj  Reactor_VS120.vcxproj.filters  Reactor_VS140.vcxproj  Reactor_VS140.vcxproj.filters  rsslReactor.c  rsslReactorWorker.c  rsslVAVersionShared.c  rsslVAVersionStatic.c
Cpp-C/Eta/Impl/Transport/: ripccomp.c  ripchttp.c  ripcinetutils.c  ripcssldh.c  ripcsslutils.c  ripcutils.c  rsslImpl.c  rsslSeqMcastTransportImpl.c  rsslSocketTransportImpl.c  rsslUniShMemTransportImpl.c  rsslWebSocketTransportImpl.c  rwsutils.c  shmemtrans.c
Cpp-C/Eta/Impl/Util/: DllVAMain.c  VAUtil_VS100.vcxproj  VAUtil_VS110.vcxproj  (+23 more)
Cpp-C/Eta/Include/: rssl.rc  rsslJsonConverter.rc  rsslResource.h  rsslVA.rc  rsslVersion.h.in
Cpp-C/Eta/etc/: enumtype.def
Cpp-C/etc/: RDMFieldDictionary  RDMFieldDictionary_large  enumtype.def
(+30249 files in other folders)
