if ( CMAKE_HOST_UNIX )
		add_custom_command(
				OUTPUT	${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/350k.xml
						${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/MsgData.xml
						${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Shared/350k.xml
						${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Shared/MsgData.xml

				COMMAND ${CMAKE_COMMAND} -E copy Common/350k.xml
						 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/350k.xml
				COMMAND ${CMAKE_COMMAND} -E copy Common/MsgData.xml
						 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/MsgData.xml
				COMMAND ${CMAKE_COMMAND} -E copy Common/350k.xml
						 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Shared/350k.xml
				COMMAND ${CMAKE_COMMAND} -E copy Common/MsgData.xml
						 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Shared/MsgData.xml

				DEPENDS	 Common/350k.xml Common/MsgData.xml
				)
else() # if ( CMAKE_HOST_WIN32 )
	add_custom_command(
			OUTPUT	${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE_MD}/350k.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE_MD}/MsgData.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG_MDD}/350k.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG_MDD}/MsgData.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE_MD}/Shared/350k.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE_MD}/MsgData.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG_MDD}/Shared/350k.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG_MDD}/MsgData.xml

			COMMAND ${CMAKE_COMMAND} -E copy Common/350k.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE_MD}/350k.xml
			COMMAND ${CMAKE_COMMAND} -E copy Common/MsgData.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE_MD}/MsgData.xml
			COMMAND ${CMAKE_COMMAND} -E copy Common/350k.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG_MDD}/350k.xml
			COMMAND ${CMAKE_COMMAND} -E copy Common/MsgData.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG_MDD}/MsgData.xml

			COMMAND ${CMAKE_COMMAND} -E copy Common/350k.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE_MD}/Shared/350k.xml
			COMMAND ${CMAKE_COMMAND} -E copy Common/MsgData.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE_MD}/Shared/MsgData.xml
			COMMAND ${CMAKE_COMMAND} -E copy Common/350k.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG_MDD}/Shared/350k.xml
			COMMAND ${CMAKE_COMMAND} -E copy Common/MsgData.xml
					${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG_MDD}/Shared/MsgData.xml

			DEPENDS	 Common/350k.xml Common/MsgData.xml
			)
endif()

add_subdirectory( EmaCppConsPerf )

